--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Lumen
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://daoudi-ahmed.vpnuser.oclock.io/S07/oQuizz_semi_croustillant/public/
+APP_URL=http://charles-capelli.vpnuser.oclock.io/oclock/s07/oQuizz_semi_croustillant/public/
 APP_TIMEZONE=UTC
 
 LOG_CHANNEL=stack
@@ -11,10 +11,10 @@ LOG_SLACK_WEBHOOK_URL=
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=quizoclock
-DB_USERNAME=quizoclock
-DB_PASSWORD=quizoclock
+DB_DATABASE=oquiz
+DB_USERNAME=oquiz
+DB_PASSWORD=oquiz
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
-ASSET_URL=http://daoudi-ahmed.vpnuser.oclock.io/S07/oQuizz_semi_croustillant/public/assets/
+ASSET_URL=http://charles-capelli.vpnuser.oclock.io/oclock/s07/oQuizz_semi_croustillant/public/assets/
