--- a/.env
+++ b/.env
@@ -11,9 +11,9 @@ LOG_SLACK_WEBHOOK_URL=
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=quizoclock
-DB_USERNAME=quizoclock
-DB_PASSWORD=quizoclock
+DB_DATABASE=oquiz
+DB_USERNAME=oquiz
+DB_PASSWORD=oquiz
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
